--- a/JfkWebApiSkills/JfkInitializer/App.config
+++ b/JfkWebApiSkills/JfkInitializer/App.config
@@ -26,7 +26,7 @@
       <add key="AzureFunctionPassword" value="" />
       
       <!--Location of sample JFK file documents that we are providing to you.-->
-      <add key="JFKFilesBlobStorageAccountConnectionString" value="SharedAccessSignature=st=2018-05-01T17%3A30%3A00Z&amp;se=2019-05-01T17%3A30%3A00Z&amp;sp=rl&amp;sv=2017-04-17&amp;sr=c&amp;sig=yoU5d8mK6AamgqHjUkIMx4qTN%2BhHnL9%2BSfcdrICg%2BI4%3D;BlobEndpoint=https://azsjfkfiles.blob.core.windows.net/" />
+      <add key="JFKFilesBlobStorageAccountConnectionString" value="BlobEndpoint=https://financedocstore.blob.core.windows.net/;QueueEndpoint=https://financedocstore.queue.core.windows.net/;FileEndpoint=https://financedocstore.file.core.windows.net/;TableEndpoint=https://financedocstore.table.core.windows.net/;SharedAccessSignature=sv=2018-03-28&ss=bfqt&srt=sco&sp=rwdlacup&se=2019-04-29T21:00:40Z&st=2019-04-29T13:00:40Z&spr=https&sig=rb8bLDxLL22dSNbkMRhCEUbwiURCOesnDrQXVBrije4%3D" />
       <add key="JFKFilesBlobContainerName" value="jfkfiles" />
 
       <!--Configurable names, feel free to change these if you like-->
